# FictionWriterStudio

./: .gitignore  .replit  DESKTOP_BUILD.md  DESKTOP_BUILD_TROUBLESHOOTING.md  GITHUB_ACTIONS_GUIDE.md  LOCAL_SETUP_GUIDE.md  OLLAMA_CORS_SETUP.md  QUICK_START.md  QUICK_START_DESKTOP.md  README.md  package-lock.json  package.json  pnpm-workspace.yaml  replit.md
.github/workflows/: build-desktop.yml
apps/desktop/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  db.ts  store.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: BibleSection.tsx  ChapterForm.tsx  ChapterList.tsx  CharacterForm.tsx  CharacterList.tsx  InlineEditor.tsx
core/indexer/: Cargo.toml
core/indexer/src/: main.rs
core/router/: Cargo.toml
core/router/src/: canon_check.rs  common_words.txt  guards.rs  heuristics.rs  main.rs  ollama_client.rs  scheduler.rs  spellcheck.rs
core/schemas/: edit-result.schema.json  style-guide.schema.json
scripts/: install_models.sh
